# rustoris

./: README.md
crates/frontend/: Cargo.toml  index.html
crates/frontend/assets/: sw.js
crates/frontend/src/: command.rs  frame_history.rs  gamepad.rs  gamepad_control_panel.rs  gamepad_panel.rs  home.rs  lib.rs  main.rs  wasm.rs  wasm_info_panel.rs
crates/frontend/src/command/: joints.rs
crates/frontend/src/gamepad/: control_panel.rs
crates/frontend/src/wasm/: frame_history.rs  info_panel.rs
crates/tauri/: Cargo.toml  tauri.conf.json
crates/tauri/src/: main.rs
