[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
egui = "0.27.2"
egui_plot = "0.27.2"
env_logger = "0.11.3"
gilrs = "0.10.6"
log = "0.4.21"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

#tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["all"] }
#types = { path = "../types" }

[dependencies.eframe]
version = "0.27.2"
default-features = false
features = [
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the wgpu rendering backend.
]

[dependencies.getrandom ]
version = "*"
features = [
    "js"
]

[dependencies.gilrs-core]
version = "0.5.11"
default-features = false

[dependencies.serde]
version = "1.0.197"
features = [
    "derive"
]

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4"
]
